# Object-SearchLocalization-Robot

./: README.md
darknet_ros/darknet_ros/: CMakeLists.txt
depthimage_to_laserscan/src/: DepthImageToLaserScan.cpp  DepthImageToLaserScanROS.cpp  depthimage_to_laserscan.cpp
explore/: CMakeLists.txt  package.xml
explore/launch/: explore_costmap.launch
explore/src/: explore.cpp
explore/srv/: setExpRes.srv
image_rectification/: CMakeLists.txt  package.xml
image_rectification/config/: rectification.yaml
image_rectification/include/image_rectification/: ImageRectificationClass.hpp
image_rectification/launch/: rectification.launch
image_rectification/src/: ImageRectificationClass.cpp  ImageRectificationNode.cpp
labrob_gazebo/: CMakeLists.txt  package.xml
labrob_gazebo/launch/: labrob.launch  plugin_sim.launch  plugin_sim_aruco.launch  plugin_sim_final.launch  sim_world.launch
labrob_gazebo/worlds/: Mundo1.world  Mundo2.world  Mundo3.world  final_test.world  final_test_2.world  final_test_aruco_10.world  labrob.world  my_mesh.world  sim_test.world  sim_world.world
ros_plugins/: CMakeLists.txt  package.xml
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/action/: ObjectRVIZMapping.action
simple_navigation_goals/launch/: lab_mission.launch
simple_navigation_goals/src/: IGNORE_object_mapping_server (copy).cpp  object_mapping.cpp  object_mapping_request.cpp  object_mapping_server.cpp  scheduler.cpp  simple_camera_goals.cpp  simple_exploration_goal.cpp  simple_navigation_goals.cpp  tf_echo_map_camera.cpp
(+154 files in other folders)
