<?xml version="1.0"?>
<package format="2">
  <name>image_rectification</name>
  <version>0.0.1</version>
  <description>Image rectification to eliminate yellow pixels.</description>
  <maintainer email="alejandro.diazr@alumnos.upm.es">Alejandro Diaz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>

</package>
